
9.013 cpan:Perlito5  2015-11-07
- no changes; "pause.perl.org" reupload

9.012 cpan:Perlito5  2015-11-06
- Docs:
-- started "Cookbook" section in Perlito5.pm POD
   with instructions to generate perlito5.js

9.011 cpan:Perlito5  2015-11-06
- fix command line option "expand_use"

9.010 cpan:Perlito5  2015-11-06
- fix MANIFEST.SKIP

9.009 cpan:Perlito5  2015-11-05
- Build:
-- add bin/perlito5 to script_files section, add dist_abstract
-- requires perl 5.014 because older versions don't have 'feature.pm',
   which breaks tests
- Parser:
-- update CORE prototypes to Perl v5.22 - use (+) instead of (\\[@%])
- Perl5-to-Javascript compiler:
-- implement (+) prototype

9.008 cpan:Perlito5   2015-11-04
- Makefile - add bin/perlito5 to EXE_FILES section
- add LICENSE.md
- Perl5-to-Javascript compiler:
-- default "print" function tries harder to find a native print
-- fixed context in readline() - that is, "$x = <$fh>" vs. "@x = <$fh>"

9.007 cpan:Perlito5   2015-10-30
- add Build.PL

9.006 cpan:Perlito5   2015-10-30
* Perlito5 (Perl 5 compiler):
- fix handling of native data parameters

9.004 cpan:Perlito5   2015-10-30
* Perlito5 (Perl 5 compiler):
- fix CPAN files  [rt.cpan.org #108111]
- main Java class is "Main"
- fix Perl5 emitter $/ variable

9.003 cpan:Perlito5   2015-10-21
* Perlito5 (Perl 5 compiler):
- fix CPAN index

9.002 cpan:Perlito5   2015-10-21
* Perlito5 (Perl 5 compiler):
- fix CPAN index

9.001 cpan:Perlito5   2015-10-21
* Perlito5 (Perl 5 compiler):
- command line: -Cast-json
- fix CPAN distro

9.000 cpan:Perlito5   2015-10-20
* Perlito5 (Perl 5 compiler):
- first CPAN distro


dev  2015-08-17

* Perlito5 (Perl 5 compiler):

- more than 1700 tests

- Parser:
-- emit the same error messages as 'perl' in more places
-- expanded support for prototypes, regex, v-strings
-- track variable redeclarations and variable scopes
-- add the variable type to AST nodes ("real sigil")