@@ -1,4 +1,4 @@
-# Do not edit this file - Generated by Perlito5 9.010
+# Do not edit this file - Generated by Perlito5 9.013
 
 use v5.10;
 use feature 'say';
@@ -20,7 +20,7 @@ use feature 'say';
         {
             package main;
             package Perlito5;
-            $VERSION = 9.011;
+            $VERSION = 9.013;
             1
         }
     }
@@ -4698,7 +4698,7 @@ use feature 'say';
                                 }
                             }
                             # use strict
-                            our %Named_block = ('BEGIN' => 1, 'UNITCHECK' => 1, 'CHECK' => 1, 'INIT' => 1, 'END' => 1);
+                            our %Named_block = ('BEGIN' => 1, 'UNITCHECK' => 1, 'CHECK' => 1, 'INIT' => 1, 'END' => 1, 'AUTOLOAD' => 1, 'DESTROY' => 1);
                             sub Perlito5::Grammar::Block::block {
                                 my $str = $_[0];
                                 my $pos = $_[1];
@@ -4817,6 +4817,9 @@ use feature 'say';
                                     local $Perlito5::PHASE = 'BEGIN';
                                     eval_begin_block(substr($str, $block_start, $m->{'to'} - $block_start));
                                     $m->{'capture'} = Perlito5::AST::Apply::->new('code' => 'undef', 'namespace' => '', 'arguments' => [])
+                                }
+                                elsif ($block_name eq 'AUTOLOAD' || $block_name eq 'DESTROY') {
+                                    $m->{'capture'} = Perlito5::AST::Sub::->new('attributes' => [], 'block' => $block, 'name' => $block_name, 'namespace' => $Perlito5::PKG_NAME, 'sig' => undef)
                                 }
                                 else {
                                     $m->{'capture'} = $block;
