@@ -1,4 +1,7 @@
 
+- Parser:
+-- AUTOLOAD and DESTROY don't need a 'sub' prefix.
+
 9.013 cpan:Perlito5  2015-11-07
 - no changes; "pause.perl.org" reupload
 
